--- a/css/cadastrar-cliente.css
+++ b/css/cadastrar-cliente.css
@@ -8,6 +8,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 1200px; /* Largura máxima ajustada */
   width: 93%;
+  min-height: 500px; 
 }
 
 
@@ -46,7 +47,7 @@
 /* Customização do botão de upload */
 .custom-file-upload {
   display: inline-block;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr ;
   padding: 10px 20px;
   cursor: pointer;
   background-color: #0D3587;
@@ -58,6 +59,7 @@
   border: none;
   width:20%;
   align-items: center;
+  margin: 0 auto; 
 }
 
 .custom-file-upload:hover {
