--- a/css/gerenciar-estoque.css
+++ b/css/gerenciar-estoque.css
@@ -2,7 +2,25 @@
     position: relative;
     top: 200px;
     width: 250px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    max-width: 400px; /* Largura máxima da caixa de busca */
+
 }
+/* Estilo dos botões de rádio */
+.busca label {
+    font-size: 16px;
+    margin-right: 15px;
+    color: #333;
+}
+
+input[type="radio"] {
+    margin-right: 5px;
+}
+
+
 
 /* Estilos para o modal */
 .modal {
@@ -56,8 +74,17 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin: 5px;
 }
 
 .btn-modal:hover {
     background-color: #555;
+}
+
+
+/* Responsividade: ajusta layout em telas menores */
+@media (max-width: 768px) {
+    .busca {
+        max-width: 90%; /* Aumenta o tamanho da caixa de busca em dispositivos móveis */
+    }
 }
