--- a/css/perfil.css
+++ b/css/perfil.css
@@ -1,14 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 
-.card-perfil{
-
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: auto;
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #f0f0f0;
+}
+/* Estilos para o card de perfil */
+.card-perfil {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
     text-align: center;
-    font-family: Lora, serif;
-    position: relative;
-    top: 20%;
+}
 
+.card-perfil img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+.card-perfil p,
+.card-perfil label {
+    font-size: 16px;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.card-perfil p {
+    font-style: italic;
+}
+
+.card-perfil label {
+    font-weight: bold;
+}
+
+.card-perfil label::after {
+    content: ': ';
+    font-weight: normal;
+}
+
+/* Estilos para responsividade */
+@media (max-width: 768px) {
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+        box-shadow: none;
+    }
+
+    .card-perfil {
+        max-width: 90%;
+    }
 }
 
