--- a/css/gerenciar-estoque.css
+++ b/css/gerenciar-estoque.css
@@ -21,34 +21,108 @@ input[type="radio"] {
 }
 
 
-
-/* Estilos para o modal */
+/* Estilização do Modal */
 .modal {
     display: none; /* Oculto por padrão */
+    align-items: center;
+    justify-content: center;
     position: fixed;
-    z-index: 1000;
+    z-index: 1000; /* Faz o modal ficar acima de outros elementos */
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fundo transparente escuro */
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo semitransparente para o overlay */
+    overflow-y: auto;
+
 }
 
+/* Estilização do conteúdo do modal */
 .modal-content {
-    background-color: #fff;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 500px;
-    border-radius: 8px;
+    
+    margin: 8% auto;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 400px; /* Define uma largura padrão para o modal */
+    max-width: 100%;
+    max-height: 90vh;
+    position: relative;
+    overflow-y: auto;
 }
 
+/* Estilos do formulário dentro do modal */
+.modal-content form {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-content form label {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 8px;
+}
+
+.modal-content form input {
+    padding: 10px;
+    font-size: 14px;
+    border: 1.5px solid lightgrey;
+    border-radius: 8px;
+    margin-bottom: 15px;
+    outline: none;
+}
+
+.modal-content form input:hover {
+    border-color: #888;
+}
+
+/* Botões de ação */
+.modal-content form button {
+    padding: 10px 15px;
+    font-size: 16px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 10px;
+}
+
+#saveChangesBtn {
+    background-color: #0D6EFD;
+    color: white;
+    margin-left: 10px;
+
+}
+
+#saveChangesBtn:hover {
+    background-color: #0056b3;
+}
+
+#deleteBtn {
+    background-color: #DC3545;
+    color: white;
+    margin-left: 10px;
+}
+
+#deleteBtn:hover {
+    background-color: #b30000;
+}
+
+/* Alinhamento dos botões */
+.modal-content form button + button {
+    margin-left: 10px;
+}
+
+/* Botão de fechar o modal */
 .close {
-    color: #aaa;
-    float: right;
+    position: absolute;
+    top: 10px;
+    right: 10px;
     font-size: 28px;
     font-weight: bold;
+    cursor: pointer;
+    color: #868686;
 }
 
 .close:hover, .close:focus {
