--- a/css/gerenciar-estoque.css
+++ b/css/gerenciar-estoque.css
@@ -1,24 +1,32 @@
 .busca{
     position: relative;
-    top: 200px;
-    width: 250px;
+    top: 20px;
+    width: 400px;
+    height: 250px;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
-    max-width: 400px; /* Largura máxima da caixa de busca */
+    max-width: 600px; /* Largura máxima da caixa de busca */
 
 }
 /* Estilo dos botões de rádio */
 .busca label {
     font-size: 16px;
-    margin-right: 15px;
+    margin-right: 20px;
     color: #333;
+    align-items: center;
 }
 
 input[type="radio"] {
     margin-right: 5px;
 }
+
+.subtitulo-formulario{
+    color: #504f4f;
+    margin-top: -10px;
+}
+
 
 
 /* Estilização do Modal */
