--- a/css/forma-pagamento.css
+++ b/css/forma-pagamento.css
@@ -1,5 +1,5 @@
-body{
-    padding-top:115px;
+body {
+    padding-top: 115px;
 }
 
 /* Estilizando o container principal */
@@ -119,8 +119,10 @@ body{
     background-color: rgba(0, 0, 0, 0.7);
     justify-content: center;
     align-items: center;
+    overflow-y: auto; /* Adiciona a rolagem vertical */
 }
 
+/* Estilo do conteúdo do modal */
 .modal-content-forma {
     background-color: white;
     padding: 20px;
@@ -128,6 +130,8 @@ body{
     width: 400px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     position: relative;
+    max-height: 80%; /* Define um tamanho máximo para o conteúdo do modal */
+    overflow-y: auto; /* Permite rolar o conteúdo caso ele ultrapasse a altura */
 }
 
 /* Estilo do botão de fechar o modal */
