--- a/css/gerenciar-estoque.css
+++ b/css/gerenciar-estoque.css
@@ -1,7 +1,7 @@
 .busca{
     position: relative;
     top: 20px;
-    width: 400px;
+    width: 100%;
     height: 250px;
     background-color: white;
     padding: 20px;
